--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,10 @@ body {
 }
 
 .container {
-    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0;
+    margin-right: 0;
     text-align: center;
 }
 
@@ -49,4 +52,200 @@ body {
 
 .nav li:hover {
     background-color: #777;
+}
+
+.filmbox {
+    width: 230px;
+    height: 400px;
+    overflow: hidden;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: rgba(59, 49, 49, 0.514) 0px 7px 20px 0px;
+    border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.filmbox img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.description {
+    margin-top: 0px;
+}
+
+.description h2 {
+    font-size: 20px;
+    color: rgb(123, 52, 52);
+    margin-top: 0px;
+}
+
+.category {
+    margin: 8px 0px;
+    font-size: 20px;
+    color: #222;
+    font-weight: bold;
+}
+
+.description .rentcount {
+    font-size: 15px;
+    margin-bottom: 3px;
+}
+
+.description .landingFilmButton {
+    margin-top: 10px;
+    outline: none;
+    border: 1px solid rgb(123, 52, 52);
+    padding: 12px 32px;
+    border-radius: 40px;
+    background-color: none;
+    color: rgb(123, 52, 52);
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: .2s linear;
+}
+
+.description .landingFilmButton:hover {
+    background: rgb(123, 52, 52);
+    color: #fff;
+}
+
+.home {
+    background-color: rgb(239, 220, 193);
+    margin: 0;
+    padding-bottom: 23px;
+    box-sizing: border-box;
+}
+
+.home h1 {
+    background-color: rgb(123, 52, 52);
+    padding: 5px;
+}
+
+.topfilms {
+    display: flex;
+    align-items: stretch; /*changed from center*/
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.divider {
+    padding: 30px;
+}
+
+.actorbox {
+    width: 230px;
+    height: 150px;
+    overflow: hidden;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: rgba(59, 49, 49, 0.514) 0px 7px 20px 0px;
+    border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.topactors {
+    display: flex;
+    align-items: stretch; /*changed from center*/
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.ActorDetails {
+    display:flex;
+    /*flex-direction: column;*/
+}
+
+.description .landingActorButton {
+    margin-top: 10px;
+    outline: none;
+    border: 1px solid rgb(123, 52, 52);
+    padding: 12px 32px;
+    border-radius: 40px;
+    background-color: none;
+    color: rgb(123, 52, 52);
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: .2s linear;
+}
+
+.description .landingActorButton:hover {
+    background: rgb(123, 52, 52);
+    color: #fff;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 50%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(123, 52, 52);
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(3, 0, 0, 0.2);
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+.popup-inner {
+    position: relative;
+}
+
+.FilmDetails h2 {
+    text-decoration: underline;
+}
+
+.FilmDetails h1 {
+    font-size: medium;
+    padding-left: 50px;
+    padding-right: 50px;
+    color:rgb(45, 5, 5)
+}
+
+.FilmDetails span {
+    font-size: 14px;
+    color: rgb(208, 148, 148);
+}
+
+.popup-inner .close-btn {
+    margin-top: 10px;
+    outline: none;
+    border: 1px solid rgb(45, 5, 5);
+    padding: 10px 30px;
+    border-radius: 20px;
+    background-color: none;
+    color: rgb(123, 52, 52);
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: .2s linear;
+}
+
+.popup-inner .close-btn:hover {
+    background: rgb(45, 5, 5);
+    color: #fff;
 }
